Unify and clean-up Product Editor's PluginSection and FeatureSection
Removes unused code like the implementation of IPluginModelListener in
PluginSection.